--- a/Mobile Development/app/src/main/res/layout/fragment_myclothes.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_myclothes.xml
@@ -11,19 +11,6 @@
         android:layout_height="match_parent"
         android:background="@color/background_fragment_activity">
 
-        <androidx.appcompat.widget.Toolbar
-            style="@style/custom_toolbar"
-            android:id="@+id/toolbar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                style="@style/custom_title_toolbar"
-                android:id="@+id/title_fragment_menu"
-                android:text="@string/my_clothes" />
-        </androidx.appcompat.widget.Toolbar>
-
         <TextView
             android:id="@+id/label_your_clothes_collection"
             android:layout_width="0dp"
@@ -35,7 +22,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/filter_clothes"
