--- a/Mobile Development/app/src/main/res/layout/fragment_settings.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_settings.xml
@@ -5,20 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_fragment_activity"
-    tools:context=".ui.setting.SettingFragment">
-
-    <androidx.appcompat.widget.Toolbar
-        style="@style/custom_toolbar"
-        android:id="@+id/toolbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
-
-        <TextView
-            style="@style/custom_title_toolbar"
-            android:id="@+id/title_fragment_menu"
-            android:text="@string/settings" />
-    </androidx.appcompat.widget.Toolbar>
+    tools:context=".ui.setting.SettingsFragment">
 
     <ImageView
         android:id="@+id/User_profile"
@@ -26,9 +13,9 @@
         android:layout_height="120dp"
         android:layout_marginTop="12dp"
         android:contentDescription="@string/user_profile"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
         tools:src="@tools:sample/avatars" />
 
     <TextView
