fix: Toolbar on all fragments part 2

--- a/Mobile Development/app/src/main/res/layout/fragment_myclothes.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_myclothes.xml
@@ -11,6 +11,23 @@
         android:layout_height="match_parent"
         android:background="@color/background_fragment_activity">
 
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/white">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                style="@style/custom_toolbar"
+                android:id="@+id/topAppBar"
+                app:menu="@menu/appbar_menu" />
+
+        </com.google.android.material.appbar.AppBarLayout>
+
         <TextView
             android:id="@+id/label_your_clothes_collection"
             android:layout_width="0dp"
@@ -22,7 +39,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/appbar_layout" />
 
         <ImageView
             android:id="@+id/filter_clothes"
