--- a/Mobile Development/app/src/main/res/layout/fragment_settings.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_settings.xml
@@ -7,13 +7,30 @@
     android:background="@color/background_fragment_activity"
     tools:context=".ui.setting.SettingsFragment">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/white">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            style="@style/custom_toolbar"
+            android:id="@+id/topAppBar"
+            app:menu="@menu/appbar_menu" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <ImageView
         android:id="@+id/User_profile"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="12dp"
         android:contentDescription="@string/user_profile"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:src="@tools:sample/avatars" />
