--- a/Mobile Development/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Mobile Development/app/src/main/res/menu/bottom_nav_menu.xml
@@ -19,6 +19,6 @@
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/account_icon"
-        android:title="@string/title_profile" />
+        android:title="@string/profile" />
 
 </menu>
