--- a/Mobile Development/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Mobile Development/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,6 +26,6 @@
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.application.fasrecon.ui.setting.SettingsFragment"
-        android:label="fragment_setting"
+        android:label="@string/profile"
         tools:layout="@layout/fragment_settings" />
 </navigation>
