feat: Set profile settings layout and features

--- a/Mobile Development/app/src/main/res/layout/activity_profile_settings.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_profile_settings.xml
@@ -110,6 +110,7 @@
 
     <TextView
         style="@style/change_password_navigation"
+        android:id="@+id/change_password"
         android:text="@string/change_password"
         app:layout_constraintTop_toBottomOf="@id/pass_edit"
         app:layout_constraintEnd_toEndOf="parent" />
