--- a/Mobile Development/app/src/main/res/values/themes.xml
+++ b/Mobile Development/app/src/main/res/values/themes.xml
@@ -76,6 +76,17 @@
         <item name="android:layout_marginStart">4dp</item>
     </style>
 
+    <style name="input_layout_enabled">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="boxCornerRadiusTopStart">12dp</item>
+        <item name="boxCornerRadiusBottomStart">12dp</item>
+        <item name="boxCornerRadiusTopEnd">12dp</item>
+        <item name="boxCornerRadiusBottomEnd">12dp</item>
+        <item name="boxStrokeColor">@color/primary_color</item>
+    </style>
+
     <style name="tv_forgot_loginpage" parent="tv_common_loginpage">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/primary_color</item>
@@ -355,7 +366,7 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="button_save_profile" parent="ThemeOverlay.Material3.Button">
+    <style name="button_save_and_change" parent="ThemeOverlay.Material3.Button">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">60dp</item>
         <item name="android:backgroundTint">@color/primary_color</item>
