--- a/Mobile Development/app/src/main/res/layout/fragment_myclothes.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_myclothes.xml
@@ -12,14 +12,11 @@
         android:background="@color/background_fragment_activity">
 
         <com.google.android.material.appbar.AppBarLayout
+            style="@style/custom_toolbar_layout"
             android:id="@+id/appbar_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/white">
+            app:layout_constraintEnd_toEndOf="parent" >
 
             <com.google.android.material.appbar.MaterialToolbar
                 style="@style/custom_toolbar"
