--- a/Mobile Development/app/src/main/res/values/colors.xml
+++ b/Mobile Development/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="background_fragment_activity">#F8FBFF</color>
     <color name="black">#FF000000</color>
     <color name="dark_shadow">#4D000000</color>
+    <color name="transparent_shadow">#0D000000</color>
     <color name="white">#FFFFFF</color>
     <color name="text_gray">#858597</color>
     <color name="lighter_gray">#ACACC2</color>
