--- a/Mobile Development/app/src/main/res/values/themes.xml
+++ b/Mobile Development/app/src/main/res/values/themes.xml
@@ -2,17 +2,18 @@
     <!-- Base application theme. -->
     <style name="Theme.Fasrecon_primary" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/primary_color</item>
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="colorPrimary">@color/primary_color</item>
+    </style>
+    <style name="Theme.Fasrecon_secondary" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
         <item name="colorPrimary">@color/primary_color</item>
     </style>
 
     <style name="Theme.Fasrecon_tertiary" parent="Theme.Material3.DayNight">
         <item name="android:statusBarColor">@color/primary_color</item>
         <item name="colorPrimary">@color/primary_color</item>
-    </style>
-
-    <style name="Theme.Fasrecon_secondary" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="colorPrimary">#4FACFE</item>
-        <item name="colorOnPrimary">@color/white</item>
     </style>
 
     <style name="button_login_onboarding_page" parent="ThemeOverlay.Material3.Button">
@@ -118,11 +119,17 @@
         <item name="android:color">@color/menu_container</item>
     </style>
 
+    <style name="container_bottom_navigation">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/custom_bottom_navigation</item>
+        <item name="android:elevation">4dp</item>
+    </style>
+
     <style name="custom_bottom_nav">
         <item name="android:background">@drawable/custom_bottom_navigation</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">75dp</item>
-        <item name="android:layout_marginBottom">-1dp</item>
         <item name="itemIconPadding">0dp</item>
         <item name="itemIconSize">28dp</item>
         <item name="itemTextColor">@color/custom_active_menu</item>
@@ -289,7 +296,7 @@
     </style>
 
     <style name="custom_toolbar_layout">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@color/white</item>
     </style>
@@ -302,7 +309,6 @@
     <style name="custom_toolbar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">?attr/actionBarSize</item>
-        <item name="android:textColor">@color/primary_color</item>
         <item name="titleCentered">true</item>
         <item name="titleTextAppearance">@style/custom_title</item>
     </style>
