--- a/Mobile Development/app/src/main/res/layout/activity_splash_screen.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_splash_screen.xml
@@ -18,42 +18,32 @@
         app:layout_constraintVertical_bias="0.4">
 
         <ImageView
+            style="@style/logo_splash_screen"
             android:id="@+id/logo_background2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:src="@drawable/logo_background2"
             tools:ignore="ContentDescription" />
 
         <ImageView
+            style="@style/logo_splash_screen"
             android:id="@+id/logo_background1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:src="@drawable/logo_background1"
             tools:ignore="ContentDescription" />
 
         <ImageView
+            style="@style/logo_splash_screen"
             android:id="@+id/logo_foreground"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:src="@drawable/logo_foreground"
             tools:ignore="ContentDescription" />
     </FrameLayout>
 
     <TextView
+        style="@style/app_name"
         android:id="@+id/app_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:text="@string/fasrecon"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:textColor="@color/primary_color"
+        android:alpha="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/logo_container"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:alpha="1"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
