--- a/Mobile Development/app/src/main/res/layout/fragment_settings.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_settings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_fragment_activity"
-    tools:context=".ui.setting.SettingsFragment">
+    tools:context=".ui.settings.SettingsFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar_layout"
