--- a/Mobile Development/app/src/main/res/layout/activity_language_settings.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_language_settings.xml
@@ -23,6 +23,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_language"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
