Feat: Adding language selection feature

--- a/Mobile Development/app/src/main/res/layout/activity_change_password.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_change_password.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_fragment_activity"
-    tools:context=".ui.changepassword.ChangePassword">
+    tools:context=".ui.changepassword.ChangePasswordActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         style="@style/custom_toolbar_layout"
