--- a/Mobile Development/app/src/main/res/layout/activity_profile_settings.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_profile_settings.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/background_fragment_activity"
     android:orientation="vertical"
-    tools:context=".ui.profile.ProfileSettings">
+    tools:context=".ui.profile.ProfileSettingsActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar_layout"
