--- a/Mobile Development/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Mobile Development/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,10 +18,10 @@
         tools:layout="@layout/fragment_myclothes" />
 
     <fragment
-        android:id="@+id/navigation_chatbot"
-        android:name="com.application.fasrecon.ui.chatbot.ChatbotFragment"
-        android:label="@string/chatbot"
-        tools:layout="@layout/fragment_chatbot" />
+        android:id="@+id/navigation_history_chatbot"
+        android:name="com.application.fasrecon.ui.historychatbot.HistoryChatbotFragment"
+        android:label="@string/history_chatbot"
+        tools:layout="@layout/fragment_history_chatbot" />
 
     <fragment
         android:id="@+id/navigation_profile"
