--- a/Mobile Development/app/src/main/res/values/colors.xml
+++ b/Mobile Development/app/src/main/res/values/colors.xml
@@ -5,12 +5,14 @@
     <color name="not_active_color">#515151</color>
     <color name="menu_container">#DEEFFF</color>
     <color name="background_fragment_activity">#F8FBFF</color>
+    <color name="icon_container">#F2F8FF</color>
     <color name="black">#FF000000</color>
     <color name="dark_shadow">#4D000000</color>
     <color name="transparent_shadow">#0D000000</color>
     <color name="white">#FFFFFF</color>
     <color name="text_gray">#858597</color>
     <color name="lighter_gray">#ACACC2</color>
+    <color name="container_gray">#DDDCDC</color>
     <color name="gray">#717181</color>
     <color name="path_color">#D7D7DF</color>
     <color name="circle2">#21283F</color>
