--- a/Mobile Development/app/src/main/res/layout/activity_chatbot.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_chatbot.xml
@@ -35,6 +35,7 @@
         tools:text="Sun 11:31 PM" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -62,7 +63,7 @@
             app:layout_constraintEnd_toStartOf="@id/send_message_button">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/email_login_input"
+                android:id="@+id/message_input"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textSize="14sp" />
