set landscape layout for all activities

--- a/Mobile Development/app/src/main/res/layout/activity_chatbot.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_chatbot.xml
@@ -46,6 +46,7 @@
         tools:itemCount="5"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/type_message_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
